@@ -4,7 +4,7 @@ Dist::Zilla::Util::Test::KENTNL - KENTNL's DZil plugin testing tool
 
 # VERSION
 
-version 1.002001
+version 1.003000
 
 # METHODS
 
