@@ -1,6 +1,9 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
-1.002001
+1.003000
+ [Added / runtime requires]
+ - Dist::Zilla::Util
+ - Module::Runtime
 
 1.002000 2014-08-22T17:40:28Z
  [Added / develop requires]
