@@ -1,6 +1,12 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [00 Minor]
+ - Add create_plugin utility.
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.002000, see misc/*.deps* for details
+ - runtime: +2
 
 1.002000 2014-08-22T17:40:28Z
  [00 Minor]
